syntax = "proto3";

message PInputTransaction {
  bytes transaction = 1;
  int32 txout_index = 2;
  bytes signature = 3;
  bytes public_key = 4;
}

message POutputTransaction {
  int32 amount = 1;
  bytes address = 2;
}

message PTransaction {
  bytes id = 1;
  repeated PInputTransaction txins = 2;
  repeated POutputTransaction txouts = 3;
}

message PUnspentOutputTransaction {
  int32 amount = 1;
  bytes address = 2;
  bool spent = 3;
}

message PUnspentTransaction {
  bytes id = 1;
  bool coinbase = 2;
  repeated PUnspentOutputTransaction unspent_txouts = 3;
}

message PBlock {
  int32 version = 1;
  int32 bits = 2;

  bytes previous_hash = 3;
  bytes hash = 4;

  int32 timestamp = 5;
  int32 nonce = 6;

  bytes merkle_root = 7;

  repeated PTransaction transactions = 9;
}
